--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://it23136656_db_user:Tharsiga123@cluster0.5dekvjs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://it23136656_db_user:Tharsiga123@cluster0.5dekvjs.mongodb.net/healio?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret_key
 EMAIL=k.saayinath@gmail.com
 EMAIL_PASS=Saayi2903   # (Gmail App Password, not your real password!)
