--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "Healio backend with Express, MongoDB, JWT authentication",
   "type": "module",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
