--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,13 +1,4 @@
 {
-  "extends": "expo/tsconfig.base",
-  "compilerOptions": {
-    "allowJs": true,
-    "checkJs": false,
-    "jsx": "react-jsx",
-    "baseUrl": ".",
-    "paths": {
-      "~/*": ["src/*"]
-    }
-  },
-  "exclude": ["node_modules", "babel.config.js", "metro.config.js"]
+  "compilerOptions": {},
+  "extends": "expo/tsconfig.base"
 }
