--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,11 @@
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.0.4",
     "axios": "^1.11.0",
-    "expo": "^53.0.22",
+    "expo": "~53.0.23",
+    "expo-font": "~13.3.2",
     "expo-linear-gradient": "~14.1.5",
+    "expo-print": "~14.1.4",
+    "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "nativewind": "latest",
     "react": "19.0.0",
