--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.5",
     "@expo/vector-icons": "^14.0.0",
+    "@lottiefiles/dotlottie-react": "^0.6.5",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
@@ -20,21 +21,26 @@
     "@react-navigation/stack": "^7.0.4",
     "axios": "^1.11.0",
     "expo": "^53.0.22",
+    "expo-av": "~15.1.7",
     "expo-linear-gradient": "~14.1.5",
+    "expo-secure-store": "~14.2.4",
     "expo-status-bar": "~2.2.3",
+    "lottie-react-native": "^7.3.4",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-circular-progress": "^1.4.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.11.2",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.20.0",
-    "expo-secure-store": "~14.2.4"
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
