--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ JWT_SECRET=your_jwt_secret_key
 EMAIL=k.saayinath@gmail.com
 EMAIL_PASS=Saayi2903   # (Gmail App Password, not your real password!)
 CLIENT_URL=http://localhost:3000
+HF_TOKEN=hf_your_actual_huggingface_api_key_here
