--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "expo-print": "~14.1.4",
     "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
+    "lottie-react-native": "^7.3.4",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-dom": "19.0.0",
