--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mailersend": "^2.6.0",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "openai": "^6.3.0"
   },
