--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,9 +1,7 @@
 {
   "expo": {
-    "name": "healioapp",
-    "slug": "healioapp",
-    "owner": "Saayinath",
-    "scheme": "healioapp",
+    "name": "frontend",
+    "slug": "frontend",
     "version": "1.0.0",
     "web": {
       "favicon": "./assets/favicon.png"
@@ -12,9 +10,7 @@
       "tsconfigPaths": true
     },
     "plugins": [
-      "expo-web-browser",
-      "expo-secure-store",
-      "expo-font"
+      "expo-secure-store"
     ],
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -24,7 +20,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -34,6 +32,11 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.saayinath.healioapp"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "d030f0a6-dedb-4127-82f8-067b2b9e88be"
+      }
     }
   }
 }
