--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "expo-location": "~18.1.6",
     "expo-media-library": "~17.1.7",
     "expo-modules-core": "~2.5.0",
+    "expo-print": "~14.1.4",
     "expo-secure-store": "~14.2.4",
     "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
@@ -47,11 +48,10 @@
     "firebase": "^12.4.0",
     "lottie-react-native": "7.2.2",
     "moti": "^0.30.0",
-    "expo-print": "~14.1.4",
     "nativewind": "latest",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.1",
     "react-native-confetti-cannon": "^1.5.2",
@@ -66,14 +66,14 @@
     "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-view-shot": "^4.0.3",
     "react-native-web": "^0.20.0",
     "recharts": "^3.2.1",
-    "socket.io-client": "^4.8.1",
-    "react-native-view-shot": "^4.0.3"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~19.0.10",
+    "@types/react": "~18.2.67",
     "eslint": "^9.25.1",
     "eslint-config-expo": "^9.2.0",
     "eslint-config-prettier": "^10.1.2",
