--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,4 +1,7 @@
+.gitignore for both frontend and backend
 node_modules/
+../backend/node_modules/
+../frontend/node_modules/
 .expo/
 dist/
 npm-debug.*
@@ -11,6 +14,9 @@ npm-debug.*
 web-build/
 
 
+# Ignore node modules
+frontend/node_modules/
+backend/node_modules/
 
 
 ios
